crates/swc_ecma_parser/tests/test262-error-references/fail/cbc28b1205acaac8.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/cbc28b1205acaac8.js:1:11
  |
1 | (b, ...a) + 1
  |           ^

